// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initENV should fail with non-existing file 1`] = `
{
  "ENV": {
    "KEY_BASE_ENV": "test",
    "KEY_PROCESS_ENV": "test",
    "NODE_ENV": "development",
    "PWD": "/home/whoami/my-whook-project",
  },
  "logCalls": [
    [
      "debug",
      "♻️ - Loading the environment service.",
    ],
    [
      "warning",
      "🖥 - Using local env.",
    ],
    [
      "debug",
      "🚫 - Could not load ".env.development" file.",
    ],
  ],
  "readFileCalls": [
    [
      "/home/whoami/my-whook-project/.env.development",
    ],
  ],
}
`;

exports[`initENV should work with existing file 1`] = `
{
  "ENV": {
    "DB_HOST": "localhost",
    "DB_PASSWORD": "oudelali",
    "KEY_BASE_ENV": "test",
    "KEY_PROCESS_ENV": "test",
    "NODE_ENV": "development",
    "PWD": "/home/whoami/my-whook-project",
  },
  "logCalls": [
    [
      "debug",
      "♻️ - Loading the environment service.",
    ],
    [
      "warning",
      "🖥 - Using local env.",
    ],
    [
      "warning",
      "💾 - Using .env file at "/home/whoami/my-whook-project/.env.development".",
    ],
  ],
  "readFileCalls": [
    [
      "/home/whoami/my-whook-project/.env.development",
    ],
  ],
}
`;
